Update index.html (Sign up Screen #1)

--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Welcome to Ramzzi Talk</title>
 </head>
 <body>
-    
+    <div id="status-bar">
+        <div class="status-bar__column"></div>
+          <span>No Service</span>
+          <!-- To Do: Wifi Icon -->
+        <div class="status-bar__column"></div>
+          <span>18:43</span>
+        <div class="status-bar__column"></div>
+          <span>110%</span>
+          <!-- Battery Icon -->
+          <!-- Lightning Icon -->
+    </div>
 </body>
 </html>
