--- a/index.html
+++ b/index.html
@@ -1,21 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Ramzzi Talk</title>
+    <title>Welcome to Kokoa Clone</title>
 </head>
 <body>
-    <div id="status-bar">
-        <div class="status-bar__column"></div>
+    <div class="status-bar">
+        <div class="status-bar__column">
           <span>No Service</span>
-          <!-- To Do: Wifi Icon -->
-        <div class="status-bar__column"></div>
+          <i class="fa-solid fa-wifi"></i>
+        </div>
+        <div class="status-bar__column">
           <span>18:43</span>
-        <div class="status-bar__column"></div>
+        </div>
+        <div class="status-bar__column">
           <span>110%</span>
-          <!-- Battery Icon -->
-          <!-- Lightning Icon -->
+          <i class="fa-solid fa-battery-full fa-lg"></i>
+          <i class="fa-solid fa-bolt-lightning"></i>
+        </div>
     </div>
+
+    <header class="welcome-header">
+      <h1 class="welcome-header__title">Welcome to Kokoa Clone</h1>
+      <p class="welcome-header__text">If you have a Kokoa Account, log in with your email or phone number.</p>
+    </header>
+
+    <form id="login-form">
+      <input type="text" placeholder="Email or phone number" />
+      <input type="password" placeholder="Password" />
+      <input type="submit" value="Log In" />
+      <a href="#">Find Kokoa Account or Password</a>
+    </form>
+
+
+
+    <script src="https://kit.fontawesome.com/df37324428.js" 
+    crossorigin="anonymous"></script>
 </body>
 </html>
