--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <i class="fa-solid fa-wifi"></i>
         </div>
         <div class="status-bar__column">
-          <span>18:43</span>
+          <span>09:24</span>
         </div>
         <div class="status-bar__column">
           <span>110%</span>
@@ -24,12 +24,14 @@
 
     <header class="welcome-header">
       <h1 class="welcome-header__title">Welcome to Kokoa Clone</h1>
-      <p class="welcome-header__text">If you have a Kokoa Account, log in with your email or phone number.</p>
+      <p class="welcome-header__text">
+        If you have a Kokoa Account, log in with your email or phone number. 
+      </p>
     </header>
 
-    <form id="login-form">
-      <input type="text" placeholder="Email or phone number" />
-      <input type="password" placeholder="Password" />
+    <form action="friends.html" method="get" id="login-form">
+      <input name="username" type="text" placeholder="Email or phone number" />
+      <input name= "password" type="password" placeholder="Password" />
       <input type="submit" value="Log In" />
       <a href="#">Find Kokoa Account or Password</a>
     </form>
