--- a/find.html
+++ b/find.html
@@ -16,40 +16,72 @@
           <span>09:24</span>
         </div>
         <div class="status-bar__column">
-          <span>110%</span>
+          <span>100%</span>
           <i class="fa-solid fa-battery-full fa-lg"></i>
           <i class="fa-solid fa-bolt-lightning"></i>
         </div>
     </div>
 
     <header class="screen-header">
-      <h1 class="screen-header__title">Chats</h1>
+      <h1 class="screen-header__title">Find</h1>
       <div class="screen-header__icons">
         <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
-        <span><i class="fa-regular fa-comment-dots fa-lg"></i></span>
-        <span><i class="fa-solid fa-music fa-lg"></i></span>
-        <span><i class="fa-solid fa-gear fa-lg"></i></span>   
+        <span><i class="fa-solid fa-gear fa-lg"></i></span>
+        <span class="screen-header__dot"></span> 
       </div>
     </header>
 
     <main class="main-screen">
-      <div class="user-component">
-        <div class="user-component__column">
-          <img 
-            src="https://cdn.pixabay.com/photo/2020/08/21/16/05/squirrel-5506514_1280.jpg" 
-            class="user-component__avatar user-component__avatar"
-          />
-          <div class="user-component__text">
-            <h4 class="user-component__title">Name</h4>
-            <h6 class="user-component__subtitle">
-              Please check My Ramzzi Account Info
-            </h6>
+      <div class="find-icons">
+        <div class="find-icons__icon">
+          <i class="fa-solid fa-qrcode"></i>
+          <span>QR Code</span>
+        </div>
+        <div class="find-icons__icon">
+          <i class="fa-regular fa-address-book"></i>
+          <span>Add by Contacts</span>
+        </div>
+        <div class="find-icons__icon">
+          <i class="fa-solid fa-fingerprint"></i>
+          <span>Add by ID</span>
+        </div>
+        <div class="find-icons__icon">
+          <i class="fa-regular fa-envelope"></i>
+          <span>Invite</span>
+        </div>
+      </div>
+      <div class="recommended-friends">
+        <h6 class="recommended-friends__title">Recommended Friends</h6>
+        <span>You have no recommended friends.</span>
+      </div>
+
+      <div class="open-chat">
+        <div class="open-chat__header">
+          <h4 class="open-chat__title">Open Chat</h4>
+          <span>
+            Go to Openchat Home <i class="fa-solid fa-chevron-right fa-xs"></i>
+          </span>
+        </div>
+
+        <div class="open-post">
+          <div class="open-post__column">
+            <h5 class="open-post__title">#BTS</h5>
+            <h6 class="open-post__hashtags">#bts#army#friends</h6>
+            <div class="open-post__members">
+              <img src="https://cdn.pixabay.com/photo/2020/08/21/16/05/squirrel-5506514_1280.jpg"/>
+              <span class="open-post__member-count">802 members</span>
+              <div class="divider"></div>
+              <span class="open-post__member-status">Active</span>
+            </div>
           </div>
-        </div>
-        <div class="user-component__column">
-          <span class="user-component__time">21:22</span>
-          <div class="badge">1</div>
-        </div>
+
+          <div class="open-post__column">
+            <div class="open-post__photo">
+              <img src="https://cdn.pixabay.com/photo/2017/05/18/15/05/chipmunk-2323827_1280.jpg"/>
+              <div class="open-post__heart-count"><i class="fa-solid fa-heart fa-xs"></i><span>326</span></div>
+            </div>
+          </div>
+        </div>  
       </div>
     </main>
 
@@ -63,7 +95,7 @@
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
             <span class="nav__notification badge">1</span>
-            <i class="fa-solid fa-comment fa-2x"></i>
+            <i class="fa-regular fa-comment fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
