--- a/chats.html
+++ b/chats.html
@@ -16,7 +16,7 @@
           <span>09:24</span>
         </div>
         <div class="status-bar__column">
-          <span>110%</span>
+          <span>100%</span>
           <i class="fa-solid fa-battery-full fa-lg"></i>
           <i class="fa-solid fa-bolt-lightning"></i>
         </div>
@@ -40,7 +40,7 @@
             class="user-component__avatar user-component__avatar"
           />
           <div class="user-component__text">
-            <h4 class="user-component__title">Name</h4>
+            <h4 class="user-component__title">Ramzzi</h4>
             <h6 class="user-component__subtitle">
               Please check My Ramzzi Account Info
             </h6>
@@ -51,6 +51,45 @@
           <div class="badge">1</div>
         </div>
       </div>
+
+      <div class="user-component">
+        <div class="user-component__column">
+          <img 
+            src="https://cdn.pixabay.com/photo/2017/11/06/09/53/tiger-2923186_1280.jpg" 
+            class="user-component__avatar user-component__avatar"
+          />
+          <div class="user-component__text">
+            <h4 class="user-component__title">Tiger</h4>
+            <h6 class="user-component__subtitle">
+              Hi
+            </h6>
+          </div>
+        </div>
+        <div class="user-component__column">
+          <span class="user-component__time">20:11</span>
+          <div class="badge">1</div>
+        </div>
+      </div>
+
+      <div class="user-component">
+        <div class="user-component__column">
+          <img 
+            src="https://cdn.pixabay.com/photo/2019/11/08/11/56/kitten-4611189_1280.jpg" 
+            class="user-component__avatar user-component__avatar"
+          />
+          <div class="user-component__text">
+            <h4 class="user-component__title">Cat</h4>
+            <h6 class="user-component__subtitle">
+              How are you
+            </h6>
+          </div>
+        </div>
+        <div class="user-component__column">
+          <span class="user-component__time">19:53</span>
+          <div class="badge">1</div>
+        </div>
+      </div>
+
     </main>
 
 <nav class="nav">
