--- a/friends.html
+++ b/friends.html
@@ -16,7 +16,7 @@
           <span>09:24</span>
         </div>
         <div class="status-bar__column">
-          <span>110%</span>
+          <span>100%</span>
           <i class="fa-solid fa-battery-full fa-lg"></i>
           <i class="fa-solid fa-bolt-lightning"></i>
         </div>
@@ -33,7 +33,8 @@
 
 
     <a id="friends-display-link">
-      <i class="fa-solid fa-circle-info"></i> Friends' Names Display <i class="fa-solid fa-chevron-right fa-xs"></i>
+      <i class="fa-solid fa-circle-info"></i> Friends' Names Display 
+      <i class="fa-solid fa-chevron-right fa-xs"></i>
     </a>
 
     <main class="friends-screen">
@@ -44,7 +45,7 @@
             class="user-component__avatar user-component__avatar--xl"
           />
           <div class="user-component__text">
-            <h4 class="user-component__title">Name</h4>
+            <h4 class="user-component__title">Ramzzi</h4>
             <!--<h6 class="user-component__subtitle">this text whatever</h6> -->
           </div>
         </div>
