Chat & Message Input

--- a/chats.html
+++ b/chats.html
@@ -33,62 +33,59 @@
     </header>
 
     <main class="main-screen">
-      <div class="user-component">
-        <div class="user-component__column">
-          <img 
-            src="https://cdn.pixabay.com/photo/2020/08/21/16/05/squirrel-5506514_1280.jpg" 
-            class="user-component__avatar user-component__avatar"
-          />
-          <div class="user-component__text">
-            <h4 class="user-component__title">Ramzzi</h4>
-            <h6 class="user-component__subtitle">
-              Please check My Ramzzi Account Info
-            </h6>
+      <a href="chat.html">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img 
+              src="https://cdn.pixabay.com/photo/2020/08/21/16/05/squirrel-5506514_1280.jpg" 
+              class="user-component__avatar user-component__avatar"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title">Ramzzi</h4>
+              <h6 class="user-component__subtitle">
+                Please check My Ramzzi Account Info
+              </h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span class="user-component__time">21:22</span>
+            <div class="badge">1</div>
           </div>
         </div>
-        <div class="user-component__column">
-          <span class="user-component__time">21:22</span>
-          <div class="badge">1</div>
+      </a>
+        <div class="user-component">
+          <div class="user-component__column">
+            <img 
+              src="https://cdn.pixabay.com/photo/2017/11/06/09/53/tiger-2923186_1280.jpg" 
+              class="user-component__avatar user-component__avatar"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title">Tiger</h4>
+              <h6 class="user-component__subtitle">Have a good time!</h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span class="user-component__time">20:11</span>
+            <div class="badge">1</div>
+          </div>
         </div>
-      </div>
 
-      <div class="user-component">
-        <div class="user-component__column">
-          <img 
-            src="https://cdn.pixabay.com/photo/2017/11/06/09/53/tiger-2923186_1280.jpg" 
-            class="user-component__avatar user-component__avatar"
-          />
-          <div class="user-component__text">
-            <h4 class="user-component__title">Tiger</h4>
-            <h6 class="user-component__subtitle">
-              Hi
-            </h6>
+        <div class="user-component">
+          <div class="user-component__column">
+            <img 
+              src="https://cdn.pixabay.com/photo/2019/11/08/11/56/kitten-4611189_1280.jpg" 
+              class="user-component__avatar user-component__avatar"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title">Cat</h4>
+              <h6 class="user-component__subtitle">How are you</h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span class="user-component__time">19:53</span>
+            <div class="badge">1</div>
           </div>
         </div>
-        <div class="user-component__column">
-          <span class="user-component__time">20:11</span>
-          <div class="badge">1</div>
-        </div>
-      </div>
-
-      <div class="user-component">
-        <div class="user-component__column">
-          <img 
-            src="https://cdn.pixabay.com/photo/2019/11/08/11/56/kitten-4611189_1280.jpg" 
-            class="user-component__avatar user-component__avatar"
-          />
-          <div class="user-component__text">
-            <h4 class="user-component__title">Cat</h4>
-            <h6 class="user-component__subtitle">
-              How are you
-            </h6>
-          </div>
-        </div>
-        <div class="user-component__column">
-          <span class="user-component__time">19:53</span>
-          <div class="badge">1</div>
-        </div>
-      </div>
 
     </main>
 
