--- a/find.html
+++ b/find.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Find - Kokoa Clone</title>
+    <title>Find - Ramzzi Clone</title>
 </head>
 <body>
     <div class="status-bar">
