--- a/friends.html
+++ b/friends.html
@@ -78,33 +78,35 @@
       </div>
     </main>
 
-<nav class="nav">
-    <ul class="nav__list">
-        <li class="nav__btn">
-          <a class="nav__link" href="friends.html">
-            <i class="fa-solid fa-user fa-2x"></i>
-          </a>
-        </li>
-        <li class="nav__btn">
-          <a class="nav__link" href="chats.html">
-            <span class="nav__notification badge">1</span>
-            <i class="fa-regular fa-comment fa-2x"></i>
-          </a>
-        </li>
-        <li class="nav__btn">
-          <a class="nav__link" href="find.html">
-            <i class="fa-solid fa-magnifying-glass fa-2x"></i>
-          </a>
-        </li>
-        <li class="nav__btn">
-          <a class="nav__link" href="more.html">
-            <span class="nav__dot"></span>
-            <i class="fa-solid fa-ellipsis fa-2x"></i>
-          </a>
-        </li>
-    </ul>
-</nav>
-
+    <nav class="nav">
+        <ul class="nav__list">
+            <li class="nav__btn">
+              <a class="nav__link" href="friends.html">
+                <i class="fa-solid fa-user fa-2x"></i>
+              </a>
+            </li>
+            <li class="nav__btn">
+              <a class="nav__link" href="chats.html">
+                <span class="nav__notification badge">1</span>
+                <i class="fa-regular fa-comment fa-2x"></i>
+              </a>
+            </li>
+            <li class="nav__btn">
+              <a class="nav__link" href="find.html">
+                <i class="fa-solid fa-magnifying-glass fa-2x"></i>
+              </a>
+            </li>
+            <li class="nav__btn">
+              <a class="nav__link" href="more.html">
+                <span class="nav__dot"></span>
+                <i class="fa-solid fa-ellipsis fa-2x"></i>
+              </a>
+            </li>
+        </ul>
+    </nav>
+    <div id="splash-screen">
+      <i class="fa-solid fa-comment"></i>
+    </div>
     <script src="https://kit.fontawesome.com/df37324428.js" 
     crossorigin="anonymous"></script>
 </body>
