--- a/chat.html
+++ b/chat.html
@@ -77,6 +77,10 @@
       </div>
     </form>
 
+    <div id="no-mobile">
+      <span>Your screen is too big </span>
+    </div>
+    
     <script src="https://kit.fontawesome.com/df37324428.js" 
     crossorigin="anonymous"></script>
 </body>
