--- a/friends.html
+++ b/friends.html
@@ -107,6 +107,11 @@
     <div id="splash-screen">
       <i class="fa-solid fa-comment"></i>
     </div>
+
+    <div id="no-mobile">
+      <span>Your screen is too big </span>
+    </div>
+
     <script src="https://kit.fontawesome.com/df37324428.js" 
     crossorigin="anonymous"></script>
 </body>
