--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
     </form>
 
 
+    <div id="no-mobile">
+      <span>Your screen is too big </span>
+    </div>
     
     <script src="https://kit.fontawesome.com/df37324428.js" 
     crossorigin="anonymous"></script>
