--- a/settings.html
+++ b/settings.html
@@ -92,6 +92,11 @@
       </ul>
     </nav>
 
+
+    <div id="no-mobile">
+      <span>Your screen is too big </span>
+    </div>
+    
     <script src="https://kit.fontawesome.com/df37324428.js" 
     crossorigin="anonymous"></script>
 </body>
